--- a/Arrays/BinarySearch/Lc875.md
+++ b/Arrays/BinarySearch/Lc875.md
@@ -1,6 +1,8 @@
-# **Leetcode 875: Koko Eating Bananas**  
+# ![**Leetcode 875: Koko Eating Bananas**](https://leetcode.com/problems/koko-eating-bananas/)  
 
-**Problem Statement:**  
+**Problem Statement:** 
+
+
 Koko loves to eat bananas. There are `piles` of bananas, and the `i`-th pile has `piles[i]` bananas. Koko can decide her eating speed per hour, `k`. Each hour, she chooses a pile of bananas and eats `k` bananas from it. If the pile has fewer than `k` bananas, she eats all of them and moves to the next hour. Koko wants to finish eating all the bananas before her guard returns after `h` hours.  
 
 **Key Idea:**  
